# pao-t-strings-2025

./: .gitignore  Makefile  README.md  package.json  pnpm-lock.yaml  pyproject.toml  slides.md
src/: 00_old_formatting.py  01_basics.py  02_template_type.py  03_interpolation.py  04_evaluation.py  05_api_overview.py  06_sql_example.py  07_html_example.py  08_logging.py  09_use_cases.py  10_sublanguages.py  11_strings_interpolations_rule.py  12_pattern_matching_example.py  README.md  check_tstrings.py  run_all.py  test_slides_examples.py
tests/: README.md  __init__.py  test_01_basics.py  test_02_template_type.py  test_03_interpolation.py  test_04_evaluation.py  test_05_api_overview.py  test_06_sql_example.py  test_07_html_example.py  test_08_logging.py  test_09_use_cases.py  test_10_sublanguages.py  test_all.py
